created all models and basic repos for for them

--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -70,6 +70,12 @@ body {
         <label for="floatingInput2">email</label>
         </div>
 
+
+        <div class="form-floating">
+            <input type="text" th:field="*{group}" class="form-control" id="floatingInput3" placeholder="group"  />
+            <label for="floatingInput3">group(not required)</label>
+        </div>
+
         <button class="w-100 btn btn-lg btn-primary" type="submit" >create</button>
         <br><br>
 
